# quantumTraffic

./: docker-compose.yml
backend/: Dockerfile  requirements.txt
backend/app/: db.py  main.py  quantm_ai.py  routes.py  websockets.py
blockchain/: Dockerfile
blockchain/contract/: Cargo.toml  peaje_contract.rs
blockchain/node/: Cargo.toml
blockchain/node/src/: lib.rs
db/: init.sql
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/: Dashboard.tsx  TrafficMap.tsx
